y.output
   0  $accept : programa $end

   1  programa : parte_declarativa parte_ejecutable
   2           | parte_ejecutable

   3  parte_declarativa : parte_declarativa sentencia_declarativa
   4                    | sentencia_declarativa

   5  parte_ejecutable : parte_ejecutable sentencia_ejecutable
   6                   | parte_ejecutable ambito
   7                   | sentencia_ejecutable
   8                   | ambito

   9  parte_ejecutable_bloque : parte_ejecutable_bloque sentencia_ejecutable
  10                          | sentencia_ejecutable

  11  sentencia_declarativa : tipo lista_var ';'
  12                        | tipo error ';'
  13                        | tipo lista_var error ';'

  14  tipo : FLOAT
  15       | INT

  16  lista_var : lista_var ',' ID
  17            | ID
  18            | error ',' ID

  19  lista_var_g : lista_var_g ',' ID
  20              | ID
  21              | error ',' ID

  22  sentencia_ejecutable : seleccion
  23                       | iteracion ';'
  24                       | iteracion
  25                       | salida_mensajes ';'
  26                       | salida_mensajes
  27                       | asignacion

  28  seleccion : IF condicion_if THEN bloque_de_sentencias
  29            | IF condicion_if THEN bloque_de_sentencias else bloque_de_sentencias
  30            | IF condicion_if bloque_de_sentencias
  31            | IF condicion_if bloque_de_sentencias ELSE bloque_de_sentencias

  32  condicion_if : '(' condicion ')'
  33               | '(' condicion
  34               | condicion ')'
  35               | condicion

  36  else : ELSE

  37  condicion_until : '(' condicion ')'
  38                  | '(' condicion
  39                  | condicion ')'
  40                  | condicion

  41  condicion : expresion comparador expresion
  42            | expresion comparador error
  43            | error comparador expresion
  44            | expresion error expresion
  45            | error comparador error
  46            | error

  47  asignacion : ID '=' expresion ';'
  48             | ID '=' expresion
  49             | ID '=' error ';'
  50             | ID '=' expresion error ';'
  51             | ID error ';'

  52  expresion : expresion '+' expresion
  53            | expresion '-' expresion
  54            | TOFLOAT '(' expresion ')'
  55            | expresion '*' expresion
  56            | expresion '/' expresion
  57            | ID
  58            | CTE
  59            | '-' CTE

  60  comparador : '>'
  61             | '<'
  62             | MAYORIGUAL
  63             | MENORIGUAL
  64             | DISTINTO
  65             | IGUALIGUAL

  66  bloque_de_sentencias : sentencia_ejecutable
  67                       | BEGIN parte_ejecutable_bloque END ';'
  68                       | BEGIN parte_ejecutable_bloque END

  69  iteracion : loop bloque_de_sentencias UNTIL condicion_until

  70  loop : LOOP

  71  salida_mensajes : PRINT '(' CADENA ')'
  72                  | PRINT '(' CADENA
  73                  | PRINT CADENA ')'
  74                  | PRINT CADENA
  75                  | PRINT '(' error ')'

  76  ambito : abre_ambito parte_declara_ambito parte_ejecutable cierra_ambito
  77         | abre_ambito parte_ejecutable cierra_ambito
  78         | abre_ambito parte_declara_ambito cierra_ambito
  79         | abre_ambito parte_ejecutable parte_declara_ambito cierra_ambito
  80         | abre_ambito error cierra_ambito

  81  abre_ambito : '{'

  82  cierra_ambito : '}'

  83  parte_declara_ambito : parte_declara_ambito sent_declara_ambito
  84                       | sent_declara_ambito

  85  sent_declara_ambito : sentencia_declarativa
  86                      | GLOBAL lista_var_g ';'

state 0
	$accept : . programa $end  (0)

	IF  shift 1
	PRINT  shift 2
	INT  shift 3
	FLOAT  shift 4
	LOOP  shift 5
	ID  shift 6
	'{'  shift 7
	.  error

	programa  goto 8
	parte_declarativa  goto 9
	parte_ejecutable  goto 10
	sentencia_declarativa  goto 11
	sentencia_ejecutable  goto 12
	ambito  goto 13
	tipo  goto 14
	seleccion  goto 15
	iteracion  goto 16
	salida_mensajes  goto 17
	asignacion  goto 18
	loop  goto 19
	abre_ambito  goto 20


state 1
	seleccion : IF . condicion_if THEN bloque_de_sentencias  (28)
	seleccion : IF . condicion_if THEN bloque_de_sentencias else bloque_de_sentencias  (29)
	seleccion : IF . condicion_if bloque_de_sentencias  (30)
	seleccion : IF . condicion_if bloque_de_sentencias ELSE bloque_de_sentencias  (31)

	error  shift 21
	TOFLOAT  shift 22
	ID  shift 23
	CTE  shift 24
	'-'  shift 25
	'('  shift 26
	.  error

	condicion_if  goto 27
	condicion  goto 28
	expresion  goto 29


state 2
	salida_mensajes : PRINT . '(' CADENA ')'  (71)
	salida_mensajes : PRINT . '(' CADENA  (72)
	salida_mensajes : PRINT . CADENA ')'  (73)
	salida_mensajes : PRINT . CADENA  (74)
	salida_mensajes : PRINT . '(' error ')'  (75)

	CADENA  shift 30
	'('  shift 31
	.  error


state 3
	tipo : INT .  (15)

	.  reduce 15


state 4
	tipo : FLOAT .  (14)

	.  reduce 14


state 5
	loop : LOOP .  (70)

	.  reduce 70


state 6
	asignacion : ID . '=' expresion ';'  (47)
	asignacion : ID . '=' expresion  (48)
	asignacion : ID . '=' error ';'  (49)
	asignacion : ID . '=' expresion error ';'  (50)
	asignacion : ID . error ';'  (51)

	error  shift 32
	'='  shift 33
	.  error


state 7
	abre_ambito : '{' .  (81)

	.  reduce 81


state 8
	$accept : programa . $end  (0)

	$end  accept


state 9
	programa : parte_declarativa . parte_ejecutable  (1)
	parte_declarativa : parte_declarativa . sentencia_declarativa  (3)

	IF  shift 1
	PRINT  shift 2
	INT  shift 3
	FLOAT  shift 4
	LOOP  shift 5
	ID  shift 6
	'{'  shift 7
	.  error

	parte_ejecutable  goto 34
	sentencia_declarativa  goto 35
	sentencia_ejecutable  goto 12
	ambito  goto 13
	tipo  goto 14
	seleccion  goto 15
	iteracion  goto 16
	salida_mensajes  goto 17
	asignacion  goto 18
	loop  goto 19
	abre_ambito  goto 20


state 10
	programa : parte_ejecutable .  (2)
	parte_ejecutable : parte_ejecutable . sentencia_ejecutable  (5)
	parte_ejecutable : parte_ejecutable . ambito  (6)

	IF  shift 1
	PRINT  shift 2
	LOOP  shift 5
	ID  shift 6
	'{'  shift 7
	$end  reduce 2

	sentencia_ejecutable  goto 36
	ambito  goto 37
	seleccion  goto 15
	iteracion  goto 16
	salida_mensajes  goto 17
	asignacion  goto 18
	loop  goto 19
	abre_ambito  goto 20


state 11
	parte_declarativa : sentencia_declarativa .  (4)

	.  reduce 4


state 12
	parte_ejecutable : sentencia_ejecutable .  (7)

	.  reduce 7


state 13
	parte_ejecutable : ambito .  (8)

	.  reduce 8


state 14
	sentencia_declarativa : tipo . lista_var ';'  (11)
	sentencia_declarativa : tipo . error ';'  (12)
	sentencia_declarativa : tipo . lista_var error ';'  (13)

	error  shift 38
	ID  shift 39
	.  error

	lista_var  goto 40


state 15
	sentencia_ejecutable : seleccion .  (22)

	.  reduce 22


state 16
	sentencia_ejecutable : iteracion . ';'  (23)
	sentencia_ejecutable : iteracion .  (24)

	';'  shift 41
	$end  reduce 24
	IF  reduce 24
	ELSE  reduce 24
	PRINT  reduce 24
	INT  reduce 24
	END  reduce 24
	FLOAT  reduce 24
	GLOBAL  reduce 24
	LOOP  reduce 24
	UNTIL  reduce 24
	ID  reduce 24
	'{'  reduce 24
	'}'  reduce 24


state 17
	sentencia_ejecutable : salida_mensajes . ';'  (25)
	sentencia_ejecutable : salida_mensajes .  (26)

	';'  shift 42
	$end  reduce 26
	IF  reduce 26
	ELSE  reduce 26
	PRINT  reduce 26
	INT  reduce 26
	END  reduce 26
	FLOAT  reduce 26
	GLOBAL  reduce 26
	LOOP  reduce 26
	UNTIL  reduce 26
	ID  reduce 26
	'{'  reduce 26
	'}'  reduce 26


state 18
	sentencia_ejecutable : asignacion .  (27)

	.  reduce 27


state 19
	iteracion : loop . bloque_de_sentencias UNTIL condicion_until  (69)

	IF  shift 1
	PRINT  shift 2
	BEGIN  shift 43
	LOOP  shift 5
	ID  shift 6
	.  error

	sentencia_ejecutable  goto 44
	seleccion  goto 15
	iteracion  goto 16
	salida_mensajes  goto 17
	asignacion  goto 18
	bloque_de_sentencias  goto 45
	loop  goto 19


state 20
	ambito : abre_ambito . parte_declara_ambito parte_ejecutable cierra_ambito  (76)
	ambito : abre_ambito . parte_ejecutable cierra_ambito  (77)
	ambito : abre_ambito . parte_declara_ambito cierra_ambito  (78)
	ambito : abre_ambito . parte_ejecutable parte_declara_ambito cierra_ambito  (79)
	ambito : abre_ambito . error cierra_ambito  (80)

	error  shift 46
	IF  shift 1
	PRINT  shift 2
	INT  shift 3
	FLOAT  shift 4
	GLOBAL  shift 47
	LOOP  shift 5
	ID  shift 6
	'{'  shift 7
	.  error

	parte_ejecutable  goto 48
	sentencia_declarativa  goto 49
	sentencia_ejecutable  goto 12
	ambito  goto 13
	tipo  goto 14
	seleccion  goto 15
	iteracion  goto 16
	salida_mensajes  goto 17
	asignacion  goto 18
	loop  goto 19
	abre_ambito  goto 20
	parte_declara_ambito  goto 50
	sent_declara_ambito  goto 51


state 21
	condicion : error . comparador expresion  (43)
	condicion : error . comparador error  (45)
	condicion : error .  (46)

	MENORIGUAL  shift 52
	MAYORIGUAL  shift 53
	IGUALIGUAL  shift 54
	DISTINTO  shift 55
	'>'  shift 56
	'<'  shift 57
	$end  reduce 46
	IF  reduce 46
	THEN  reduce 46
	ELSE  reduce 46
	PRINT  reduce 46
	INT  reduce 46
	BEGIN  reduce 46
	END  reduce 46
	FLOAT  reduce 46
	GLOBAL  reduce 46
	LOOP  reduce 46
	UNTIL  reduce 46
	ID  reduce 46
	';'  reduce 46
	')'  reduce 46
	'{'  reduce 46
	'}'  reduce 46

	comparador  goto 58


state 22
	expresion : TOFLOAT . '(' expresion ')'  (54)

	'('  shift 59
	.  error


state 23
	expresion : ID .  (57)

	.  reduce 57


state 24
	expresion : CTE .  (58)

	.  reduce 58


state 25
	expresion : '-' . CTE  (59)

	CTE  shift 60
	.  error


state 26
	condicion_if : '(' . condicion ')'  (32)
	condicion_if : '(' . condicion  (33)

	error  shift 21
	TOFLOAT  shift 22
	ID  shift 23
	CTE  shift 24
	'-'  shift 25
	.  error

	condicion  goto 61
	expresion  goto 29


state 27
	seleccion : IF condicion_if . THEN bloque_de_sentencias  (28)
	seleccion : IF condicion_if . THEN bloque_de_sentencias else bloque_de_sentencias  (29)
	seleccion : IF condicion_if . bloque_de_sentencias  (30)
	seleccion : IF condicion_if . bloque_de_sentencias ELSE bloque_de_sentencias  (31)

	IF  shift 1
	THEN  shift 62
	PRINT  shift 2
	BEGIN  shift 43
	LOOP  shift 5
	ID  shift 6
	.  error

	sentencia_ejecutable  goto 44
	seleccion  goto 15
	iteracion  goto 16
	salida_mensajes  goto 17
	asignacion  goto 18
	bloque_de_sentencias  goto 63
	loop  goto 19


state 28
	condicion_if : condicion . ')'  (34)
	condicion_if : condicion .  (35)

	')'  shift 64
	IF  reduce 35
	THEN  reduce 35
	PRINT  reduce 35
	BEGIN  reduce 35
	LOOP  reduce 35
	ID  reduce 35


state 29
	condicion : expresion . comparador expresion  (41)
	condicion : expresion . comparador error  (42)
	condicion : expresion . error expresion  (44)
	expresion : expresion . '+' expresion  (52)
	expresion : expresion . '-' expresion  (53)
	expresion : expresion . '*' expresion  (55)
	expresion : expresion . '/' expresion  (56)

	error  shift 65
	MENORIGUAL  shift 52
	MAYORIGUAL  shift 53
	IGUALIGUAL  shift 54
	DISTINTO  shift 55
	'+'  shift 66
	'-'  shift 67
	'*'  shift 68
	'/'  shift 69
	'>'  shift 56
	'<'  shift 57
	.  error

	comparador  goto 70


state 30
	salida_mensajes : PRINT CADENA . ')'  (73)
	salida_mensajes : PRINT CADENA .  (74)

	')'  shift 71
	$end  reduce 74
	IF  reduce 74
	ELSE  reduce 74
	PRINT  reduce 74
	INT  reduce 74
	END  reduce 74
	FLOAT  reduce 74
	GLOBAL  reduce 74
	LOOP  reduce 74
	UNTIL  reduce 74
	ID  reduce 74
	';'  reduce 74
	'{'  reduce 74
	'}'  reduce 74


state 31
	salida_mensajes : PRINT '(' . CADENA ')'  (71)
	salida_mensajes : PRINT '(' . CADENA  (72)
	salida_mensajes : PRINT '(' . error ')'  (75)

	error  shift 72
	CADENA  shift 73
	.  error


state 32
	asignacion : ID error . ';'  (51)

	';'  shift 74
	.  error


state 33
	asignacion : ID '=' . expresion ';'  (47)
	asignacion : ID '=' . expresion  (48)
	asignacion : ID '=' . error ';'  (49)
	asignacion : ID '=' . expresion error ';'  (50)

	error  shift 75
	TOFLOAT  shift 22
	ID  shift 23
	CTE  shift 24
	'-'  shift 25
	.  error

	expresion  goto 76


state 34
	programa : parte_declarativa parte_ejecutable .  (1)
	parte_ejecutable : parte_ejecutable . sentencia_ejecutable  (5)
	parte_ejecutable : parte_ejecutable . ambito  (6)

	IF  shift 1
	PRINT  shift 2
	LOOP  shift 5
	ID  shift 6
	'{'  shift 7
	$end  reduce 1

	sentencia_ejecutable  goto 36
	ambito  goto 37
	seleccion  goto 15
	iteracion  goto 16
	salida_mensajes  goto 17
	asignacion  goto 18
	loop  goto 19
	abre_ambito  goto 20


state 35
	parte_declarativa : parte_declarativa sentencia_declarativa .  (3)

	.  reduce 3


state 36
	parte_ejecutable : parte_ejecutable sentencia_ejecutable .  (5)

	.  reduce 5


state 37
	parte_ejecutable : parte_ejecutable ambito .  (6)

	.  reduce 6


state 38
	sentencia_declarativa : tipo error . ';'  (12)
	lista_var : error . ',' ID  (18)

	';'  shift 77
	','  shift 78
	.  error


state 39
	lista_var : ID .  (17)

	.  reduce 17


state 40
	sentencia_declarativa : tipo lista_var . ';'  (11)
	sentencia_declarativa : tipo lista_var . error ';'  (13)
	lista_var : lista_var . ',' ID  (16)

	error  shift 79
	';'  shift 80
	','  shift 81
	.  error


state 41
	sentencia_ejecutable : iteracion ';' .  (23)

	.  reduce 23


state 42
	sentencia_ejecutable : salida_mensajes ';' .  (25)

	.  reduce 25


state 43
	bloque_de_sentencias : BEGIN . parte_ejecutable_bloque END ';'  (67)
	bloque_de_sentencias : BEGIN . parte_ejecutable_bloque END  (68)

	IF  shift 1
	PRINT  shift 2
	LOOP  shift 5
	ID  shift 6
	.  error

	sentencia_ejecutable  goto 82
	parte_ejecutable_bloque  goto 83
	seleccion  goto 15
	iteracion  goto 16
	salida_mensajes  goto 17
	asignacion  goto 18
	loop  goto 19


state 44
	bloque_de_sentencias : sentencia_ejecutable .  (66)

	.  reduce 66


state 45
	iteracion : loop bloque_de_sentencias . UNTIL condicion_until  (69)

	UNTIL  shift 84
	.  error


state 46
	ambito : abre_ambito error . cierra_ambito  (80)

	'}'  shift 85
	.  error

	cierra_ambito  goto 86


state 47
	sent_declara_ambito : GLOBAL . lista_var_g ';'  (86)

	error  shift 87
	ID  shift 88
	.  error

	lista_var_g  goto 89


state 48
	parte_ejecutable : parte_ejecutable . sentencia_ejecutable  (5)
	parte_ejecutable : parte_ejecutable . ambito  (6)
	ambito : abre_ambito parte_ejecutable . cierra_ambito  (77)
	ambito : abre_ambito parte_ejecutable . parte_declara_ambito cierra_ambito  (79)

	IF  shift 1
	PRINT  shift 2
	INT  shift 3
	FLOAT  shift 4
	GLOBAL  shift 47
	LOOP  shift 5
	ID  shift 6
	'{'  shift 7
	'}'  shift 85
	.  error

	sentencia_declarativa  goto 49
	sentencia_ejecutable  goto 36
	ambito  goto 37
	tipo  goto 14
	seleccion  goto 15
	iteracion  goto 16
	salida_mensajes  goto 17
	asignacion  goto 18
	loop  goto 19
	abre_ambito  goto 20
	parte_declara_ambito  goto 90
	cierra_ambito  goto 91
	sent_declara_ambito  goto 51


state 49
	sent_declara_ambito : sentencia_declarativa .  (85)

	.  reduce 85


state 50
	ambito : abre_ambito parte_declara_ambito . parte_ejecutable cierra_ambito  (76)
	ambito : abre_ambito parte_declara_ambito . cierra_ambito  (78)
	parte_declara_ambito : parte_declara_ambito . sent_declara_ambito  (83)

	IF  shift 1
	PRINT  shift 2
	INT  shift 3
	FLOAT  shift 4
	GLOBAL  shift 47
	LOOP  shift 5
	ID  shift 6
	'{'  shift 7
	'}'  shift 85
	.  error

	parte_ejecutable  goto 92
	sentencia_declarativa  goto 49
	sentencia_ejecutable  goto 12
	ambito  goto 13
	tipo  goto 14
	seleccion  goto 15
	iteracion  goto 16
	salida_mensajes  goto 17
	asignacion  goto 18
	loop  goto 19
	abre_ambito  goto 20
	cierra_ambito  goto 93
	sent_declara_ambito  goto 94


state 51
	parte_declara_ambito : sent_declara_ambito .  (84)

	.  reduce 84


state 52
	comparador : MENORIGUAL .  (63)

	.  reduce 63


state 53
	comparador : MAYORIGUAL .  (62)

	.  reduce 62


state 54
	comparador : IGUALIGUAL .  (65)

	.  reduce 65


state 55
	comparador : DISTINTO .  (64)

	.  reduce 64


state 56
	comparador : '>' .  (60)

	.  reduce 60


state 57
	comparador : '<' .  (61)

	.  reduce 61


state 58
	condicion : error comparador . expresion  (43)
	condicion : error comparador . error  (45)

	error  shift 95
	TOFLOAT  shift 22
	ID  shift 23
	CTE  shift 24
	'-'  shift 25
	.  error

	expresion  goto 96


state 59
	expresion : TOFLOAT '(' . expresion ')'  (54)

	TOFLOAT  shift 22
	ID  shift 23
	CTE  shift 24
	'-'  shift 25
	.  error

	expresion  goto 97


state 60
	expresion : '-' CTE .  (59)

	.  reduce 59


state 61
	condicion_if : '(' condicion . ')'  (32)
	condicion_if : '(' condicion .  (33)

	')'  shift 98
	IF  reduce 33
	THEN  reduce 33
	PRINT  reduce 33
	BEGIN  reduce 33
	LOOP  reduce 33
	ID  reduce 33


state 62
	seleccion : IF condicion_if THEN . bloque_de_sentencias  (28)
	seleccion : IF condicion_if THEN . bloque_de_sentencias else bloque_de_sentencias  (29)

	IF  shift 1
	PRINT  shift 2
	BEGIN  shift 43
	LOOP  shift 5
	ID  shift 6
	.  error

	sentencia_ejecutable  goto 44
	seleccion  goto 15
	iteracion  goto 16
	salida_mensajes  goto 17
	asignacion  goto 18
	bloque_de_sentencias  goto 99
	loop  goto 19


state 63
	seleccion : IF condicion_if bloque_de_sentencias .  (30)
	seleccion : IF condicion_if bloque_de_sentencias . ELSE bloque_de_sentencias  (31)

	ELSE  shift 100
	$end  reduce 30
	IF  reduce 30
	PRINT  reduce 30
	INT  reduce 30
	END  reduce 30
	FLOAT  reduce 30
	GLOBAL  reduce 30
	LOOP  reduce 30
	UNTIL  reduce 30
	ID  reduce 30
	'{'  reduce 30
	'}'  reduce 30


state 64
	condicion_if : condicion ')' .  (34)

	.  reduce 34


state 65
	condicion : expresion error . expresion  (44)

	TOFLOAT  shift 22
	ID  shift 23
	CTE  shift 24
	'-'  shift 25
	.  error

	expresion  goto 101


state 66
	expresion : expresion '+' . expresion  (52)

